--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "autoprefixer": "^10.4.7",
@@ -29,6 +30,8 @@
     "styled-jsx": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.0.3",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "18.0.5",
@@ -36,7 +39,9 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
+    "jest": "^29.0.3",
     "postcss": "^8.4.5",
+    "ts-jest": "^29.0.1",
     "typescript": "^4.7.4"
   }
 }
