--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": "./app",
@@ -25,6 +24,6 @@
       "@/api/*":["api/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/tracks/createtsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/tracks/createtsx", "app/tests/utils/utils.test.ts"],
   "exclude": ["node_modules"]
 }
